tests/type-errors/no_otherwise.arl
archetype no_otherwise

asset myasset {
  id: string;
}

action anaction () {
  specification {
    s1 : let ma = myasset.nth(0) in "myid" = ma
  }
  effect {
    let a : int = 0 in
    a := 1
  }
}
